--- a/GestionUsuario/src/styles/style.css
+++ b/GestionUsuario/src/styles/style.css
@@ -100,6 +100,22 @@ body {
   border-radius: 2px;
 }
 
+#gridStandard {
+  display: flex;
+  background-color: beige;
+  justify-content: center;
+  align-content: center;
+  padding-top: 30px;
+}
+
+#gridStandard > form {
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 30%;
+  background-color: rgba(184, 135, 11, 0.11);
+}
+
 #columnOne {
   border: 1px solid gray;
   background-color:darkgoldenrod;
@@ -123,6 +139,12 @@ body {
   background-color:rgba(184, 135, 11, 0.11);
   padding: 30px;
   justify-content: flex-start;
+}
+
+#contentul3 {
+  display: flex;
+  align-items: center;
+  background-color: rgba(184, 135, 11, 0.11);
 }
 
 #blockTitle {
