--- a/SistemaDeVentas/src/styles/style.css
+++ b/SistemaDeVentas/src/styles/style.css
@@ -1,4 +1,4 @@
-header{
+.cabecera {
   background-color:darkgray;
   padding: 30px;
   margin: 0px;
@@ -11,7 +11,7 @@ header{
   padding: 10px;
 }
 
-.contenedor {
+.contenedor2 {
   background-color:white;
   margin: 0px;
   padding: 5px;
@@ -68,13 +68,9 @@ header{
   color: blue;
 }
 
-ul {
+.lista {
   list-style: none;
   padding: 0px;
-  margin: 0px;
-}
-
-body {
   margin: 0px;
 }
 
@@ -159,7 +155,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-input {
+/* input {
   padding: 3px;
   border-radius: 0.5px;
 }
@@ -167,7 +163,7 @@ input {
 select {
   padding: 3px;
   border-radius: 0.5px;
-}
+} */
 
 .dataBaseContent {
   display: grid;
