--- a/SistemaDeVentas/src/styles/style.css
+++ b/SistemaDeVentas/src/styles/style.css
@@ -48,6 +48,10 @@
   width: 40%;
 }
 
+.thirdButton {
+  width: 50%;
+}
+
 .buscar {
   background-color: white;
   border: 1px solid gray;
@@ -143,6 +147,13 @@
 
 #contentul3 {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(184, 135, 11, 0.11);
+}
+
+#contentul4 {
+  display: flex;
   align-items: center;
   background-color: rgba(184, 135, 11, 0.11);
 }
@@ -159,16 +170,6 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* input {
-  padding: 3px;
-  border-radius: 0.5px;
-}
-
-select {
-  padding: 3px;
-  border-radius: 0.5px;
-} */
-
 .dataBaseContent {
   display: grid;
   grid-column: span 2;
@@ -178,7 +179,7 @@ select {
 
 .dataBaseTitle {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   border: 1px solid black;
   align-items: center;
   padding: 20px;
@@ -190,10 +191,16 @@ select {
 .dataBase {
   display: flex;
   justify-content: space-between;
+  text-align: center;
   border: 1px solid black;
   padding: 20px;
   align-items: center;
   list-style: none;
+}
+
+.textBox {
+  border: 1px solid gray;
+  border-radius: 4px;
 }
 
 #filter {
@@ -205,9 +212,4 @@ select {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   padding: 5px;
-}
-
-.textBox {
-  border: 1px solid gray;
-  border-radius: 4px;
 }
