--- a/SistemaDeVentas/src/styles/style.css
+++ b/SistemaDeVentas/src/styles/style.css
@@ -1,14 +1,12 @@
 .cabecera {
-  background-color:darkgray;
+  background-color:darkgoldenrod;
   padding: 30px;
   margin: 0px;
+  justify-content: flex-end;
 }
 
-.navbar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px;
+.sidebar {
+  display: grid;
   list-style: none;
 }
 
@@ -19,6 +17,7 @@
   padding: 5px;
   border-radius: 50px;
   box-shadow: 1px 1px gray;
+  justify-self: flex-end;
 }
 
 .button {
@@ -45,33 +44,13 @@
 
 .secondaryButton {
   border: 1px solid gray;
-  width: 40%;
+  background-color:burlywood;
+  border-radius: 3px;
+  padding: 10px;
 }
 
 .thirdButton {
   width: 50%;
-}
-
-.buscar {
-  background-color: white;
-  border: 1px solid gray;
-  padding: 5px;
-  border-radius: 9px;
-  width: 300px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.buscar:focus-within {
-  border: 1px solid gray;
-}
-
-.buscar > input {
-  border: 0px;
-}
-
-.iconoBuscar:hover {
-  color: blue;
 }
 
 .lista {
@@ -90,9 +69,10 @@
 
 #outer-grid {
   display: grid;
-  grid-template-columns: 20% 80%;
-  list-style: none;
-  height: 100%;
+  justify-content: center;
+  text-align: center;
+  grid-template-columns: 18% 82%;
+  height: 92vh;
 }
 
 #inner-grid {
@@ -123,21 +103,20 @@
 }
 
 #columnOne {
-  border: 1px solid gray;
   background-color:darkgoldenrod;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 25px;
   padding-left: 25px;
-  border-radius: 2px;
   height: auto;
 }
 
 #contentUl1 {
   display: flex;
+  grid-column: span 2;
   background-color:rgba(184, 135, 11, 0.11);
   padding: 30px;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 #contentUl2 {
@@ -162,9 +141,10 @@
 
 #blockTitle {
   display: flex;
+  justify-self: center;
   text-align: center;
   background-color: white;
-  padding: 30px;
+  padding: 30px 30px 30px 30px;
   margin: 8px;
   border-radius: 10px;
   font-size:larger;
@@ -303,4 +283,51 @@
 }
 .iconDelete{
   color: coral;
+}
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  list-style: none;
+}
+
+.contImagen {
+  width: 240px;
+  height: 350px;
+  display: flex;
+}
+
+.contImagen > img {
+  object-fit:cover;
+  width: 100%;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.breedCardContainer {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+
+.breedCard {
+  margin: 10px;
+  background-color: cadetblue;
+  box-shadow: 5px 10px 5px gray;
+  border-radius: 10px;
+}
+
+.breedCard:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+}
+
+.breedTitle {
+  display: flex;
+  color: white;
+  margin: 10px;
+  font-weight: bolder;
+  font-size: x-large;
+  justify-content: center;
 }
